fixed bug #1378 "mysqlbinlog for remote host is broken"